# ec2-instance-tools

./: .bumpversion.cfg  .gitignore  README.md  setup.cfg  setup.py
ec2_instance_tools/: metadata.py  namer.py  whoami.py
