[metadata]
name = ec2-instance-tools
version = 0.3.5
description = Useful tools for working on EC2 instances
author = Caltech IMSS ADS
author_email = imss-ads-staff@caltech.edu
url = https://github.com/caltechads/deployfish
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords =
    aws
    devops
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
project_urls =
    Source = https://github.com/caltechads/ec2-instance-tools
    Issues = https://github.com/caltechads/ec2-instance-tools/issues

[options]
zip_safe = False
platforms = any
packages = find:
include_package_data = True
install_requires =
    boto3 >= 1.10
    requests >= 2.20
    urllib3 < 2

[options.entry_points]
console_scripts =
    sshec2 = ec2_instance_tools.sshec2:main
    ec2autonamer = ec2_instance_tools.ec2autonamer:main
    ec2whoami = ec2_instance_tools.ec2whoami:main

[bdist_wheel]
universal = 1

# -------
# Linters
# -------

[flake8]
max-line-length: 120
filename: *.py
exclude: *.cfg, *.js, *.json, *.bak, *.md, *.sql, *.sh, *.txt, *.yml, simple_test_db, Makefile, Dockerfile, MANIFEST.in
# E221:  multiple spaces before operator
# E241:  multiple spaces after :
# E265:  block comment should start with '# '
# E266:  too many leading '#' for block comment
# E401:  multiple imports on one line
ignore = E221,E241,E265,E266,E401,C0321

[pylint.FORMAT]
max-line-length=120

[pylint.MESSAGES CONTROL]
disable=
    missing-docstring,
    protected-access,
    unused-argument,
    invalid-name,
    too-few-public-methods,
    attribute-defined-outside-init,
    consider-using-f-string,
    too-many-lines,
    no-member,
    logging-format-interpolation

[mypy]
python_executable: ~/.pyenv/shims/python
implicit_optional = True
exclude = (^build/.*$|^docs/.*\.py$|test_.*\.py$)

[mypy-pytz.*]
ignore_missing_imports = True

[mypy-requests.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True

